# rss-update

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  execute.sh
.github/workflows/: rust.yml
data/: config.json  read_list.json
src/: config.rs  display.rs  feeds.rs  main.rs  readlist.rs
