[package]
name = "rss-update"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
