[package]
name = "rss-update"
version = "0.1.2"
edition = "2018"
description = "cli util for tracking updates on rss/atom feed"
license-file = "LICENSE"
homepage = "https://github.com/satylogin/rss-update"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
termcolor = "1.1.2" 
clap = "2.33.3"
futures = "0.3.16"
dirs = "3.0.2"
syndication = "0.5.0"
atom_syndication = "0.6.0"

[dev-dependencies]
tempfile = "3"
